--- a/app/assets/templates/chores/new.jst.ejs
+++ b/app/assets/templates/chores/new.jst.ejs
@@ -1,23 +1,33 @@
 <form>
-  <input type="text" name="title" placeholder="Title">
-  <input type="number" name="points" placeholder="Points">
+  <div class="row">
+    <div class="small-9 columns">
+      <input type="text" name="title" placeholder="Title">
+    </div>
+    <div class="small-3 columns">
+      <input type="number" name="points" placeholder="Points">
+    </div>
+  </div>
+
   <label>Frequency:</label>
-
-  <input id="chore_frequency_1" name="frequency" type="radio" value="1">
-  <label class="click-tag" for="chore_frequency_1">Daily</label></br>
-
-  <input id="chore_frequency_7" name="frequency" type="radio" value="7">
-  <label class="click-tag" for="chore_frequency_7">Weekly</label></br>
-
-
-  <input id="chore_frequency_14" name="frequency" type="radio" value="14">
-  <label class="click-tag"for="chore_frequency_14">Bi-weekly</label></br>
-
-  <input id="chore_frequency_30" name="frequency" type="radio" value="30">
-  <label class="click-tag" for="chore_frequency_30">Monthly</label></br>
-
-  </br>
-  <input  class="small button secondary round" type="submit" value="Submit">
+  <div class="row">
+    <div class="small-3 columns">
+      <input id="chore_frequency_1" name="frequency" type="radio" value="1">
+      <label class="click-tag" for="chore_frequency_1">Daily</label>
+    </div>
+    <div class="small-3 columns">
+       <input id="chore_frequency_7" name="frequency" type="radio" value="7">
+      <label class="click-tag" for="chore_frequency_7">Weekly</label>
+    </div>
+    <div class="small-3 columns">
+      <input id="chore_frequency_14" name="frequency" type="radio" value="14">
+      <label class="click-tag"for="chore_frequency_14">Bi-weekly</label>
+    </div>
+    <div class="small-3 columns">
+      <input id="chore_frequency_30" name="frequency" type="radio" value="30">
+      <label class="click-tag" for="chore_frequency_30">Monthly</label>
+    </div>
+  </div>
+  <input class="small button secondary round" type="submit" value="Submit" style="margin-top:5px;">
 </form>
 
 <button class="small button cancel-form">Cancel</button>
