--- a/app/views/expenses/new_from_grocery_list.html.erb
+++ b/app/views/expenses/new_from_grocery_list.html.erb
@@ -6,7 +6,7 @@
   <%= f.label :description %>
   <%= f.text_field :description %>
   <%= f.label :total_cents %>
-  <%= f.number_field :total_cents %>
+  <%= f.number_field :total, :step => '0.01' %>
   <%= f.hidden_field :contributor_ids, :value => @expense.contributor_ids %>
   <%= f.hidden_field :purchased_on, :value => Date.today %>
 
