update style on invite user button

--- a/app/assets/templates/users/invite.jst.ejs
+++ b/app/assets/templates/users/invite.jst.ejs
@@ -1,7 +1,7 @@
 <form>
   <input type="text" name="email" placeholder="Roomate email">
 
-  <input type="submit" value="Invite">
+  <input class="small button secondary round" type="submit" value="Invite">
 </form>
 
 <button class="small button cancel-form">Cancel</button>
