add buttons to the list show view in backbone

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,4 +1,9 @@
-<h3><%= list.name %></h3>
+<h3 class="left"><%= list.name %></h3>
+<ul class="button-group right">
+  <li><a href="#" class="small button secondary">Subscribe</a></li>
+  <li><a href="#" class="small button secondary">Buy</a></li>
+</ul>
+<div class="clearfix"></div>
 <div id="itemsContainer"></div>
 <button class="small button new-item">Add item</button>
 <button class="small button right all-lists">Back</button>
