change new_from_grocery_list in expenses to respond to get instead of post, and link to it from the backbone dash

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,7 +1,7 @@
 <h3 class="left"><%= list.name %></h3>
 <ul class="button-group right">
   <li><a href="#" class="small button secondary">Subscribe</a></li>
-  <li><a href="#" class="small button secondary">Buy</a></li>
+  <li><a href=<%= "/new_from_grocery_list/"+list.id %> class="small button secondary">Buy</a></li>
 </ul>
 <div class="clearfix"></div>
 <div id="itemsContainer"></div>
