--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,9 +1,9 @@
 <h3 class="left"><%= list.name %></h3>
 <ul class="button-group right">
   <% if (list.users.indexOf(LiveTogether.current_user.id) > -1){ %>
-  <li><a href="#" id="unsubscribe" class="small button secondary">Unsubscribe</a></li>
+  <li><a href="#" id="unsubscribe" class="small button alert">Unsubscribe</a></li>
   <% } else { %>
-  <li><a href="#" id="subscribe" class="small button secondary">Subscribe</a></li>
+  <li><a href="#" id="subscribe" class="small button success">Subscribe</a></li>
   <% } %>
   <li><a href=<%= "/new_from_grocery_list/"+list.id %> class="small button secondary">Buy</a></li>
 </ul>
