add modal for new expense form

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -69,5 +69,6 @@
   <div class='row'>
     <h4><center>$ <%= display_dollars(user_total) %></center></h4>
   </div>
-    <%= link_to 'New Expense', new_expense_path %>
+
+  <button class="button small" id="newExpenseForm">New Expense</button>
     <br>
