--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           </li>
           <li class="divider"></li>
           <li class="nav">
-            <%= link_to "Settlements", payments_path %>
+            <%= link_to "Payments", payments_path %>
           </li>
         <% end %>
       </ul>
