fix bug where buy form would pop up when creating a new list item

--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -5,7 +5,7 @@
   <% } else { %>
   <li><a href="#" id="subscribe" class="small button success">Subscribe</a></li>
   <% } %>
-  <li><a href=<%= "/new_from_grocery_list/"+list.id %> class="small button secondary">Buy</a></li>
+  <li><a href=<%= "/new_from_grocery_list/"+list.id %> class="small button secondary" id="buyList">Buy</a></li>
 </ul>
 <div class="clearfix"></div>
 <div id="itemsContainer"></div>
