--- a/app/assets/templates/users/invite.jst.ejs
+++ b/app/assets/templates/users/invite.jst.ejs
@@ -1,7 +1,8 @@
+<hr>
 <form>
   <input type="text" name="email" placeholder="Roomate email">
 
   <input class="small button secondary round" type="submit" value="Invite">
 </form>
-
-<button class="small button cancel-form">Cancel</button>
+<hr>
+<center><button class="small button cancel-form">Cancel</button></center>
