--- a/app/assets/templates/users/index.jst.ejs
+++ b/app/assets/templates/users/index.jst.ejs
@@ -9,4 +9,4 @@
   <tbody>
   </tbody>
 </table>
-<button class="small button invite-user">Invite user</button>
+<center><button class="small button invite-user">Invite another roomate</button></center>
