--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Expense</h1>
+<center><h1>New Expense</h1></center>
 
 <%= form_for @expense do |f| %>
 
@@ -33,5 +33,6 @@
       </li>
     <% end %>
   </ul>
-  <%= f.submit "Submit", class: "button success" %>
+  <center><%= f.submit "Submit", class: "button success" %></center>
 <% end %>
+<hr>
