hotfix typos, change roomate to roommate

--- a/app/assets/templates/users/index.jst.ejs
+++ b/app/assets/templates/users/index.jst.ejs
@@ -1,4 +1,4 @@
-<h3>Roomates</h3>
+<h3>Roommates</h3>
 <table style="width: 100%;">
   <thead>
     <tr>
@@ -9,4 +9,4 @@
   <tbody>
   </tbody>
 </table>
-<center><button class="small button invite-user">Invite another roomate</button></center>
+<center><button class="small button invite-user">Invite another roommate</button></center>
