--- a/app/assets/templates/users/invite.jst.ejs
+++ b/app/assets/templates/users/invite.jst.ejs
@@ -1,6 +1,6 @@
 <hr>
 <form>
-  <input type="text" name="email" placeholder="Roomate email">
+  <input type="text" name="email" placeholder="Roommate email">
 
   <input class="small button secondary round" type="submit" value="Invite">
 </form>
