--- a/app/views/user_mailer/invitation_email.text.erb
+++ b/app/views/user_mailer/invitation_email.text.erb
@@ -1,4 +1,4 @@
-Your roomates invited you to join the house <%= @house.name %> at Live-Together!
+Your roommates invited you to join the house <%= @house.name %> at Live-Together!
 ================================================================================
 
 To join the house, just follow this link: <%= @url %>.
