--- a/app/views/user_mailer/payment_request_email.html.erb
+++ b/app/views/user_mailer/payment_request_email.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Good day <%= @borrower.name %> !</p>
-    <p>Your roomate <em> <%= @lender.name %> </em> requested a balance settlement for $ <%= @balance %> </p>
+    <p>Your roommate <em> <%= @lender.name %> </em> requested a balance settlement for $ <%= @balance %> </p>
     <p>
       Log-in here: <%= @url %> to view all the details.
     </p>
