--- a/app/views/user_mailer/payment_request_email.text.erb
+++ b/app/views/user_mailer/payment_request_email.text.erb
@@ -1,7 +1,7 @@
 Good day <%= @borrower.name %> !
 ==================================================
 
-Your roomate <%= @lender.name %> requested
+Your roommate <%= @lender.name %> requested
 a balance settlement for $ <%= @balance %>
 
 Log-in here: <%= @url %> to view all the details.
